# MLOps_Equipo60

./: .dockerignore  .gitignore  Dockerfile  Fase1_Proyecto.ipynb  Makefile  README.MD  README.md  index.ipynb  label_map_nobeyesdad.csv  obesity_clean.csv  obesity_data_dictionary.csv  pyproject.toml  requirements.txt
.dvc/: config
data/processed/: .gitignore  X_test.csv.dvc  X_train.csv.dvc  drift_results.csv.dvc  label_map_nobeyesdad.csv.dvc  obesity_clean.csv.dvc  obesity_data_dictionary.csv.dvc  obesity_estimation_cleaned.csv.dvc  obesity_estimation_test.csv.dvc  obesity_ml_ready.csv.dvc  pred_category_swap_15pct.csv.dvc  pred_combo_full.csv.dvc  pred_noise_10pct.csv.dvc  pred_scale_height_weight.csv.dvc  y_test.csv.dvc  y_train.csv.dvc
data/raw/: .gitignore  obesity_estimation_modified.csv.dvc  obesity_estimation_original.csv.dvc
data_drift/: drift_results.csv  pred_category_swap_15pct.csv  pred_combo_full.csv  pred_noise_10pct.csv  pred_scale_height_weight.csv
docs/: METRICS.md  PROJECT_SUMMARY.md  TESTING.md  mkdocs.yml
docs/docs/: index.md
model_bundle/: MLmodel  conda.yaml  input_example.json  python_env.yaml  registered_model_meta  requirements.txt  serving_input_example.json
notebooks/: 1_Limpieza_y_EDA.ipynb  2_Modelo_Predictivo.ipynb
obesity_level_classifier/: __init__.py  config.py  dataset.py  features.py  plots.py
obesity_level_classifier/api/: __init__.py  app.py
scripts/: export_model.py
tests/: __init__.py  conftest.py  test_api.py  test_dataset.py  test_features.py  test_integration.py  test_plots.py  test_predict.py  test_train.py
(+9 files in other folders)
