[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "obesity_level_classifier"
version = "0.0.1"
description = "ML project to classify obesity levels based on data from Mexico, Peru and Colombia."
authors = [
  { name = "ML Ops Equipo 60" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["obesity_level_classifier"]
include = ["pyproject.toml", "obesity_level_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["obesity_level_classifier"]
force-sort-within-sections = true

